@@ -57,13 +57,15 @@ public:
 
     typedef QMap<QString, QString> Rule;
     struct Entry {
-        Entry(const QString &n=QString()) : name(n), ratingFrom(0), ratingTo(0) { }
+        Entry(const QString &n=QString()) : name(n), ratingFrom(0), ratingTo(0), minDuration(0), maxDuration(0) { }
         bool operator==(const Entry &o) const { return name==o.name; }
         bool haveRating() const { return ratingFrom>=0 && ratingTo>0; }
         QString name;
         QList<Rule> rules;
         int ratingFrom;
         int ratingTo;
+        int minDuration;
+        int maxDuration;
     };
 
     static Dynamic * self();
@@ -79,6 +81,7 @@ public:
     static const QString constGenreKey;
     static const QString constDateKey;
     static const QString constRatingKey;
+    static const QString constDurationKey;
     static const QString constFileKey;
     static const QString constExactKey;
     static const QString constExcludeKey;
