@@ -6,12 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>303</width>
-    <height>161</height>
+    <width>689</width>
+    <height>495</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -34,7 +43,16 @@
    <item>
     <widget class="QWidget" name="controls" native="true">
      <layout class="QGridLayout" name="gridLayout">
-      <property name="margin">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
        <number>0</number>
       </property>
       <item row="0" column="0" rowspan="4" colspan="2">
@@ -81,40 +99,101 @@
         </property>
        </spacer>
       </item>
-      <item row="4" column="0" rowspan="1" colspan="2">
-       <layout class="QHBoxLayout" name="ratingsGroupBoxLayout">
-       <item>
-        <widget class="QLabel" name="ratingRangeLabel">
-         <property name="text">
-          <string>Songs with ratings between:</string>
-         </property>
-        </widget>
-       </item>
-        <item>
-         <widget class="RatingWidget" name="ratingFrom"/>
-        </item>
-        <item>
-         <widget class="QLabel" name="ratingToLabel">
+      <item row="4" column="0">
+       <layout class="QFormLayout" name="formLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="ratingRangeLabel_2">
           <property name="text">
-           <string> - </string>
+           <string>Songs with ratings between:</string>
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="RatingWidget" name="ratingTo"/>
+        <item row="0" column="1">
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="RatingWidget" name="ratingFrom" native="true"/>
+          </item>
+          <item>
+           <widget class="QLabel" name="ratingToLabel">
+            <property name="text">
+             <string> - </string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="RatingWidget" name="ratingTo" native="true"/>
+          </item>
+          <item>
+           <spacer name="rangeLabel">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>2</width>
+              <height>2</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
         </item>
-        <item>
-        <spacer name="ratingSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Songs with duration between:</string>
           </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>2</width>
-            <height>2</height>
-           </size>
-          </property>
-         </spacer>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <widget class="QSpinBox" name="minDuration">
+            <property name="suffix">
+             <string> seconds</string>
+            </property>
+            <property name="maximum">
+             <number>300</number>
+            </property>
+            <property name="singleStep">
+             <number>10</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="rangeLabel2">
+            <property name="text">
+             <string> - </string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="maxDuration">
+            <property name="suffix">
+             <string> seconds</string>
+            </property>
+            <property name="maximum">
+             <number>1200</number>
+            </property>
+            <property name="singleStep">
+             <number>10</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="durationSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>2</width>
+              <height>2</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
         </item>
        </layout>
       </item>
@@ -131,7 +210,7 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1" colspan="2">
+      <item row="6" column="1" colspan="2">
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
