@@ -69,6 +69,7 @@
     seconds) to confirm backend is playing.
 53. When playing MPD's HTTP output stream, don't stop playback on pause.
 54. Add button on podcasts page to show only unplayed podcasts.
+55. Add min/max duration to dynamic playlist rules.
 
 2.0.1
 -----
